# jellyfish

./: .gitignore
JellyFish/: .gitignore
JellyFish/Assets/: New Terrain.asset  New Universal Render Pipeline Asset.asset  TerrainData_00aa5be9-d8b1-4a40-90f1-fb6089090bc4.asset  TerrainData_1ae9a112-3f4a-41f7-a9e5-0cd9c737f144.asset  TerrainData_1c1e51ea-603f-4b43-8ba7-e12c8def0164.asset  TerrainData_34c512d9-e53a-4ec0-a084-e8d95645d7fb.asset  TerrainData_38c1ed22-3b7a-48e8-9cfb-c9a995c93f05.asset  TerrainData_4ccd97bf-d303-4d6d-b3f6-7b15dd16c606.asset  TerrainData_54682b2e-9dee-425a-a43b-853bbe962389.asset  TerrainData_5f5a4e13-f8eb-4d6b-b31b-6c41b44cea1c.asset  TerrainData_62f368aa-2679-4019-81ad-dcd7cad81890.asset  TerrainData_65723987-5a76-4b8b-b344-b1600e9614c7.asset  TerrainData_7fe0caa7-1188-470d-932e-61361ad30f2d.asset  TerrainData_9015b159-58ac-44ba-b362-a3eb663091fe.asset  TerrainData_9ce84a74-6f17-4278-a1d3-b5631363affe.asset  TerrainData_dca7d694-7358-4720-b1f3-0088a1e4a3b4.asset  TerrainData_eed42b97-a9f1-4204-8966-b0e3882363ef.asset  jelly.prefab  tentacle.cs  underwater skybox.mat
JellyFish/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
assets/: OceanFloor.tmd
ble_peripheral_basic/: CMakeLists.txt  prj.conf
jellyfish_zephyr_app/: CMakeLists.txt  prj.conf  xiao_ble.overlay
jellyfish_zephyr_app/inc/: app_packet.h  butterworth.h  emg.h  haptics.h  heartbeat.h
jellyfish_zephyr_app/src/: butterworth.c  emg.c  haptics.c  heartbeat.c  main.c  peripheral_mtu_update.c
(+126 files in other folders)
